--- a/.github/workflows/dockerize-server.yml
+++ b/.github/workflows/dockerize-server.yml
@@ -40,6 +40,12 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      
+      - name: Cache register
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ hashFiles('./server/Dockerfile') }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -63,6 +69,9 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64, linux/arm64
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+
 
   trigger-workflow-build-cluster-image:
     needs: [dockerize-server]
